# static-node

./: README.md  pyproject.toml  setup.py
tests/: test_cli.py
